<resources>
    <string name="app_name">Reto2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Comiditas.com</string>
    <string name="nav_header_subtitle">Bienvenidos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_sucursales">Sucursales</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>