<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.reto2.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        android:fontFamily="@font/fruzzybubbles"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.example.reto2.ui.Productos.ProductosFragment"
        android:label="@string/menu_productos"
        android:fontFamily="@font/fruzzybubbles"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="com.example.reto2.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        android:fontFamily="@font/fruzzybubbles"
        tools:layout="@layout/fragment_servicios" />
    <fragment
        android:id="@+id/nav_sucursales"
        android:name="com.example.reto2.ui.sucursales.SucursalesFragment"
        android:label="@string/menu_sucursales"
        android:fontFamily="@font/fruzzybubbles"
        tools:layout="@layout/fragment_sucursales" />
</navigation>